# familycalendar

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/familycal/: __init__.py  asgi.py  settings.py
src/familycal/static/: script.js  style.css
